# AVP-SLAM-PLUS

./: .gitignore  README.md
GraphSLAM/: bag2graph.ipynb
avp_slam_plus/: CMakeLists.txt  manifest.xml  package.xml
avp_slam_plus/config/: configFile.yaml
avp_slam_plus/data/: laserCloudMap.pcd  laserCloudMap_origin.pcd
avp_slam_plus/launch/: localizationRGB.launch  localizationRGBD.launch  slamRGB.launch  slamRGBD.launch
avp_slam_plus/scripts/: Odometry.py
avp_slam_plus/src/: localization.cpp  mapping.cpp  pointCloudFromRGB.cpp  pointCloudFromRGBD.cpp
controller/: CMakeLists.txt  package.xml
controller/scripts/: amcl_controller.py  new_controller.py  odom_controller.py  robot_loc_controller.py
convert_orientation/: CMakeLists.txt  package.xml
convert_orientation/src/: qt.cpp  qt_amcl.cpp  qt_filtered.cpp
data/g2o/: readme.txt
data/rosbag/: readme.txt
data_analysis/: record_pose.py
parse_rosbag/: CMakeLists.txt  GTList.npy  output.g2o  package.xml  parse_rosbag.cpp  poseList.npy
parse_rosbag/include/: common.h
simlate_gazebo/robot_control/: CMakeLists.txt  package.xml
simlate_gazebo/robot_control/launch/: robot_control.launch
simlate_gazebo/robot_control/scripts/: robot_control.py  robot_path.py
simlate_gazebo/simulate_enviroment/: CMakeLists.txt  package.xml
simlate_gazebo/simulate_enviroment/config/: simulate_environment.rviz
simlate_gazebo/simulate_enviroment/launch/: multiCamera.launch
simlate_gazebo/simulate_enviroment/worlds/: avp_map1.world  newAVP.world
simlate_gazebo/simulate_robot/: CMakeLists.txt  package.xml
simlate_gazebo/simulate_robot/urdf/: robot_body.urdf.xacro  robot_with_realsense.urdf.xacro
