<?xml version="1.0"?>
<package>
  <name>avp_slam_plus</name>
  <version>1.0.0</version>

  <description>
    an auto vehicle parking SLAM system
  </description>

  <maintainer email="liuguitao@sia.cn">liuguitao</maintainer>

  <license>BSD</license>

  <author email="liuguitao@sia.cn">Liu Guitao</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>

  <export>
  </export>
</package>
